add jwt validation to update details, update date parsing
