# user-service/api/swagger.json
@@ -137,7 +137,12 @@
                 }
             },
             "put": {
-                "description": "Updates user details by their id",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Updates user details by their id, requires user's jwt, date is in the YYYY-MM-DD format",
                 "consumes": [
                     "application/json"
                 ],
@@ -162,7 +167,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDetailsToUpdate"
+                            "$ref": "#/definitions/dto.UserDetailStr"
                         }
                     }
                 ],
@@ -172,6 +177,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -247,17 +258,20 @@
                 }
             }
         },
-        "dto.UserDetailsToUpdate": {
+        "dto.UserDetailStr": {
             "type": "object",
             "properties": {
                 "birthday": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "I love ball and films'"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "John Doe"
                 }
             }
         },
@@ -293,7 +307,7 @@
         "dto.UserToCreate": {
             "type": "object",
             "properties": {
-                "id": {
+                "userId": {
                     "type": "string"
                 },
                 "username": {
